roco-gen/tests/templates/snapshots/inject[.config_toml]@deployment.snap
---
source: roco-gen/tests/templates/deployment.rs
expression: "fs::read_to_string(tree_fs.root.join(\".cargo\").join(\"config.toml\")).expect(\".cargo/config.toml not exists\")"
---
[alias]
roco = "run --"
roco-tool = "run --"

playground = "run --example playground"
