roco-gen/tests/templates/snapshots/inject[app_rs]@Api_controller.snap
---
source: roco-gen/tests/templates/controller.rs
expression: "fs::read_to_string(tree_fs.root.join(\"src\").join(\"app.rs\")).expect(\"app.rs injection failed\")"
---
impl Hooks for App {
    fn routes(_ctx: &AppContext) -> AppRoutes {
        AppRoutes::with_default_routes() // controller routes below
            .add_route(controllers::movie::routes())
            .add_route(controllers::auth::routes())
        }
    }
