roco-gen/tests/templates/snapshots/inject[app_rs]@task.snap
---
source: roco-gen/tests/templates/task.rs
expression: "fs::read_to_string(tree_fs.root.join(\"src\").join(\"app.rs\")).expect(\"Failed to read updated app file: app.rs\")"
---
impl Hooks for App {
    #[allow(unused_variables)]
    fn register_tasks(tasks: &mut Tasks) {
        tasks.register(tasks::cleanup::Cleanup);
        // tasks-inject (do not remove)
    }
