roco-gen/tests/templates/snapshots/inject[controller_mod_rs]@Html_scaffold.snap
---
source: roco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(controllers_path.join(\"mod.rs\")).expect(\"mod.rs injection failed\")"
---
pub mod movie;
