roco-gen/tests/templates/snapshots/inject[controller_mod_rs]@Htmx_controller.snap
---
source: roco-gen/tests/templates/controller.rs
expression: "fs::read_to_string(controllers_path.join(\"mod.rs\")).expect(\"mod.rs injection failed\")"
---
pub mod movie;
