roco-gen/tests/templates/snapshots/inject[mailer_mod_rs]@mailer.snap
---
source: roco-gen/tests/templates/mailer.rs
expression: "fs::read_to_string(path).unwrap_or_else(|_| panic!(\"{name} missing\"))"
---
pub mod reset_password;
